fix spacing issue on button

--- a/my-app/src/css/create-game.css
+++ b/my-app/src/css/create-game.css
@@ -14,9 +14,10 @@
     margin-bottom: 2rem;
 }
 
-input {
+/* input {
     width: 75%;
-}
+} */
+
 .modal {
     background-color: #FFAE27;
 }
